# secs

./: Cargo.toml  README.md
examples/: entities.rs  resources.rs
src/: lib.rs  resources.rs  system.rs  world.rs
src/entities/: auto_query.rs  fn_query.rs  mod.rs  query.rs  query_entity.rs  system.rs
src/entities/fn_query/: fn_query_mut.rs  mod.rs
tests/: advanced_query.rs  canary.rs  entities.rs  resource_test.rs  systems_test.rs  trait_implementations.rs
