[package]
name = "secs"
version = "0.1.0"
edition = "2021"
author = "loafoflead"
description = "An ECS crate written in Rust based on the tutorial series by Brooks Builds on Youtube."
homepage = "https://github.com/loafoflead/secs"
repository = "https://github.com/loafoflead/secs"
readme = "README.md"
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
thiserror = "*"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]